# lumify

./: CONTRIBUTING.md  Dockerfile  README.md  glama.json  server.json
.github/workflows/: publish-n8n-nodes.yml
clients/langchain-lumify/: LICENSE  README.md  pyproject.toml
clients/langchain-lumify/docs/: lumify.mdx
clients/langchain-lumify/langchain_lumify/: __init__.py
clients/langchain-lumify/tests/: test_connection_config.py  test_friendly_errors.py  test_live_smoke.py
clients/lumify-mcp/: README.md  package.json
clients/lumify-mcp/src/: bridge.js
clients/lumify-mcp/test/: bridge.test.js  pressure.test.js
clients/lumify-sdk/: README.md  package-lock.json  package.json  tsconfig.json
clients/lumify-sdk-python/: .gitignore  README.md  pyproject.toml
clients/lumify-sdk-python/lumify/: __init__.py  _async_transport.py  _transport.py  client.py  errors.py  meta.py  models.py  pagination.py  sse.py  webhook_signature.py
clients/lumify-sdk-python/lumify/aio/: __init__.py  client.py  pagination.py  sse.py
clients/lumify-sdk-python/lumify/aio/resources/: __init__.py  agent.py  estimate.py  events.py  players.py  sports.py  teams.py  webhooks.py
clients/lumify-sdk-python/lumify/resources/: __init__.py  agent.py  estimate.py  events.py  players.py  sports.py  teams.py  webhooks.py
clients/lumify-sdk-python/scripts/: gen_models.py
clients/lumify-sdk-python/tests/: _async_helpers.py  _helpers.py  conftest.py  test_async_client.py  test_async_contract.py  test_async_pagination.py  test_async_resources.py  test_async_sse.py  test_client.py  test_contract.py  test_errors.py  test_meta.py  test_pagination.py  test_resources.py  test_sse.py  test_webhook_signature.py
clients/lumify-sdk/openapi/: openapi.sdk.json
clients/lumify-sdk/scripts/: gen-models.mjs
clients/lumify-sdk/src/: client.ts  errors.ts  index.ts  lumify.ts  meta.ts  pagination.ts  sse.ts  webhook-signature.ts
clients/lumify-sdk/src/resources/: agent.ts  estimate.ts  events.ts  players.ts  sports.ts  teams.ts  webhooks.ts
clients/lumify-sdk/test/: _helpers.js  client.test.js  contract.test.js  errors.test.js  pagination.test.js  resources.test.js  sse.test.js  webhook-signature.test.js
clients/n8n-nodes-lumify/: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
clients/n8n-nodes-lumify/credentials/: LumifyApi.credentials.ts
clients/n8n-nodes-lumify/nodes/Lumify/: Lumify.node.ts  helpers.ts
clients/n8n-nodes-lumify/scripts/: copy-icons.mjs
clients/n8n-nodes-lumify/test/: helpers.test.js  node-structure.test.js
docs/: agent-cookbook.md  lumify.postman_collection.json
docs/getting-started/: quick-start.md  self-hosting.md
